[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Scripts/Main/InGameMenus/FullScreenInGameMenu.gd" type="Script" id=1]

[node name="FullScreenInGameMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1025.0
margin_bottom = 603.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 403.0
margin_top = 279.0
margin_right = 558.0
margin_bottom = 328.0
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 410.986
margin_top = 471.339
margin_right = 559.986
margin_bottom = 516.339
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
